--- a/sally-student-starter-code.html
+++ b/sally-student-starter-code.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="description" content="Here you can find Sally contact information">
     <title>Sally contact</title>
-    <link rel="stylesheet" href="main.css">
+    <!--Get rid of this link!-->
+    
 </head>
 <body >
     <main id="resume">
@@ -14,6 +15,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"> </script>
     <script type="text/babel">
     // Our code will go here
+    // ESLint
         function App(props){
             return(
                 <main>
@@ -21,12 +23,12 @@
                         <section id="introduction">
                             <p>Hi I'm {props.name} I'm {props.age} and below this line you'll find more information about me.</p>
                         </section>
-                         <br>
+                         <br/>
                     <header>
                         <div id="img">
                             <img src={props.image} alt="Malaga Panoramic"/>
                         </div>
-                        <h1 class="title">About me</h1>
+                        <h1 className="title">About me</h1>
                      </header>
                     <section id="Education">
                         <p>I have studied at:</p>
@@ -35,7 +37,7 @@
                             <li>{props.school[1]}</li>
                         </ul>
                     </section>
-                    <br>
+                    <br/>
                     <section id="works">
                         <p>I have worked at:</p>
                         <div id="works_list">
@@ -49,7 +51,7 @@
                             </ul>
                         </div>
                     </section>
-                    <br>
+                    <br/>
                     <section id="Contact-section">
                         <p>My contact information: </p>
                         <address id="Contact-info">
@@ -63,14 +65,14 @@
             );
         }
         ReactDOM.render(
-            <App>
-                name = 'Sally';
-                age = 25;
-                school = [ABC, DEF]
-                work = [abc, def]
-                email= "adaf@gmail.com"
-                number = "125-563-4523"
-            </App>, document.getElementById("#resume"))
+            <App
+                name='Sally' //No semi-colons!
+                age={25}
+                school={['ABC', 'DEF']}
+                work={['abc', 'def']}
+                email="adaf@gmail.com"
+                number="125-563-4523"
+            />, document.getElementById("resume"))
     </script>
 </body>
 </html>
